# Commonly-used-configuration

./: .gitignore  .vimrc  myvim
dotfiles/: .gitignore  a.out  compile_commands.json  config.ghostty  config_vim.sh  main.cc  my_module.cc  pre_install.sh  test1.py
dotfiles/cheat/: docker  kubectl  redis  selinux
dotfiles/cpp/: .clang-format  .fdignore  .gitignore  CMakeLists.txt  a.out  build_mac.sh  main.cc
dotfiles/cpp/src/base/: array_list.h  check.cc  check.h  dict_tree_base_map.h  interval_dict_tree.h  local_udp_socket.cc  local_udp_socket.h  log.cc  log.h  pipe.cc  pipe.h  ring_vector.h  util.cc  util.h
dotfiles/cpp/src/test/: noblock_read.cc  pipe_server.cc  pipe_test_define.h  test_array_list.cc  test_history_data.cc  test_interval_dict_tree.cc  test_socket_client.cc  test_socket_server.cc  test_util.cc  test_util.h  transform_history_data.cc  zsh_complete_client_test.cc
dotfiles/cpp/src/zsh_complete/: CMakeLists.txt  define.cc  define.h  message.h  version.h
dotfiles/cpp/src/zsh_complete/zsh_complete_server/: history_data.cc  history_data.h  zsh_complete_server.cc
dotfiles/cpp/src/zsh_complete/zsh_module/: zsh_complete.cc  zsh_complete.epro  zsh_complete.mdh
dotfiles/cpp/src/zsh_module_common/: builtin.epro  compat.epro  cond.epro  config.h  context.epro  exec.epro  glob.epro  hashnameddir.epro  hashtable.epro  hist.epro  init.epro  input.epro  jobs.epro  lex.epro  linklist.epro  loop.epro  main.epro  math.epro  mem.epro  module.epro  options.epro  params.epro  parse.epro  patchlevel.h  pattern.epro  prompt.epro  sigcount.h  signals.epro  signames.epro  sort.epro  string.epro  subst.epro  text.epro  utils.epro  zsh.mdh  zshpaths.h  zshxmods.h
dotfiles/cpp/src/zsh_util/: function_load.cc  function_load.h
dotfiles/posh/: README_FONT.md  README_FONT_CONFIG.md  config.ps1  configure_terminal_font.ps1  env_config.ps1  font_config.ps1  init.ps1  install_font.ps1  pre_install.ps1  setup.ps1  setup_font.ps1
dotfiles/posh/myposh/: fzf_plugin.ps1  internal_tool.ps1  keybinding.ps1  plugin.ps1  to_bash_cmd.ps1  tool.ps1
dotfiles/scrip_tool/: install.sh
dotfiles/scrip_tool/plot_script/: example.txt  plot_start.sh  run.py
dotfiles/scrip_tool/plot_script/cpp/: CMakeLists.txt  main.cc  plot_client.cc  plot_client.h
dotfiles/scrip_tool/plot_script/plot/: base_line_parser.py  base_plot.py  base_reader.py  csv_reader.py  histogram_plot.py  line_plot.py  log_tool.py  multi_line_parser.py  plot.py  plot_client.cc  plot_client.h  plot_tools.py  read_file.py  run.py  run_plot.py  select_data_parser.py  single_line_parser.py  socket_reader.py  test.py  text_process.py  txt_reader.py  (+2 more)
dotfiles/scrip_tool/python_tool/: time_tool.py
dotfiles/scrip_tool/script/: brew_origion.sh  countp.sh  dezip.sh  format.sh  git-add.sh  plot.py  plot.sh  plot_start.sh  read_file.py  tool_function.sh
dotfiles/tmux/: fzf_select_pane.sh  fzf_window.sh  setup.sh  tmux.conf  tmux1.conf
dotfiles/vim/: .gitignore  .netrwhist  clangd_config.yaml  coc-settings.json  help_vim.vim  init.vim  settings.json  setup-coc.sh  setup.sh  vimrc.vim
dotfiles/vim/autoload/: autoload
dotfiles/vim/configs/: common.vim  configs  function_vim.vim  fzf.vim  keymap.vim  leaderf.vim  plug.vim  project.vim  utils.vim  ycm.vim
dotfiles/vim/ftplugin/: bash.lua  java.lua  lua.lua  python.lua
dotfiles/vim/lua/: .luarc.json  cpp_file_genaration.lua  env.lua  fzf_cmd.lua  fzf_plugin.lua  init.lua  key_map.lua  nvim_function.lua  plugin.lua  util.lua  windows_manager.lua
dotfiles/vim/snippets/: all.snippets  c.snippets  dot.snippets  snippets
dotfiles/zsh/: common.zsh  custom_config.zsh  fzf.zsh  git-edit.zsh  gitconfig  gitconfig_alias  load_nvm.sh  remind_cmd  setup.sh  tool_function.zsh  zsh_aliases  zsh_docker  zsh_fzf_extra  zsh_path_config  zsh_plug  zshenv  zshrc  zshrc.bak
dotfiles/zsh/custom_prompt/: ffmpeg.prompt  git.prompt  net.prompt  remind_cmd  source.prompt  ssh.prompt
dotfiles/zsh/zsh_config/: cmd_function.zsh  color.zsh  common.zsh  env.sh  fzf.zsh  fzf_help.zsh  lazy_load.zsh  tool_function.sh  tool_function.zsh  vi_mode.zsh  zsh_aliases.zsh  zsh_complete.zsh  zsh_complete_build_checker.zsh  zsh_define.zsh  zsh_fzf_extra.zsh  zsh_history_config.zsh  zsh_theme.zsh  zsh_zinit.zsh  zsh_zinit.zsh_win
(+43 files in other folders)
